syntax = "proto3";
package fullMesh;

message Message {
  oneof type {
    Peers members = 1;
    Peers adjacentMembers = 3;
    bool heartbeat = 4;
  }
}

message Peers {
  repeated uint32 ids = 1;
}
